# Simple_Task_Manager

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  Dockerfile  LICENSE  Main.qml  README.md  resource.qrc  translationsappSimpleTaskManager_de.ts  translationsappSimpleTaskManager_en.ts  translationsappSimpleTaskManager_ru.ts
HomePage/: Home.qml  ProfileEdit.qml  ProjectListing.qml
LoginPage/: Login.qml
MenuPage/: MainMenu.qml
SettingsPage/: Settings.qml
SignUpPage/: SignUp.qml
SpacePage/: CreateTaskForm.qml  Space.qml
TaskPage/: Task.qml
android/src/com/appsimpletaskmanager/: NotificationClient.java
common/: CustomButton.qml  CustomCalendar.qml  CustomMenu.qml  CustomTextField.qml  ErrorPopup.qml  Search.qml  SpaceTab.qml  Tab.qml  ThemeManager.qml
release/: android-build-appSimpleTaskManager-release-signed.apk.idsig  output-metadata.json
release/baselineProfiles/0/: android-build-appSimpleTaskManager-release-unsigned.dm
release/baselineProfiles/1/: android-build-appSimpleTaskManager-release-unsigned.dm
server/: clienthandler.cpp  clienthandler.h  requesttask.cpp  requesttask.h  sessionmanager.cpp  sessionmanager.h  taskmanagerserver.cpp  taskmanagerserver.h
src/: client.cpp  client.h  imagetobytearray.cpp  imagetobytearray.h  main.cpp  notificationclient.cpp  notificationclient.h  spacemodel.cpp  spacemodel.h  tasksmodel.cpp  tasksmodel.h  translator.cpp  translator.h
translations/: appSimpleTaskManager_de.ts  appSimpleTaskManager_en.ts  appSimpleTaskManager_ru.ts
